# WebScraperUI

./: .replit  Pasted--Content-Generation-Modal-div-class-modal-fade-id-contentGenerationModal-tabindex-1--1732772750745.txt  Pasted--json-website-analysis-style-Professional-and-Direct-tone-Persuasive-an-1732714113253.txt  analyzer.py  app.py  auth.py  models.py  pyproject.toml  replit.nix  scraper.py
static/css/: custom.css
static/js/: main.js
templates/: agents.html  base.html  content_generation.html  dashboard.html  data.html  login.html  website_details.html
tests/: test_routes.py
