[project]
name = "repl-nix-webscraperui"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=1.12.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "lxml>=5.3.0",
    "langchain>=0.3.8",
    "openai>=1.55.1",
    "crewai>=0.83.0",
]
